fixed middle col alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,7 @@ input[type="button"]:focus {
 table {
     border-collapse: collapse;
     table-layout: fixed;
+    margin: auto;
 }
 
 td {
